@@ -26,6 +26,7 @@
 #include <auto-format.h>
 #include <collect.h>
 #include <value.h>
+#include <selection.h>
 
 /***************************************************************************/
 
@@ -98,8 +99,118 @@ gnumeric_product (FunctionEvalInfo *ei, GnmExprList *nodes)
 
 /***************************************************************************/
 
+static const char *help_gnumeric_version = {
+	N_("@FUNCTION=GNUMERIC_VERSION\n"
+	   "@SYNTAX=GNUMERIC_VERSION()\n"
+
+	   "@DESCRIPTION="
+	   "GNUMERIC_VERSION return the version of gnumeric as a string."
+
+	   "\n"
+	   "@EXAMPLES=\n"
+	   "GNUMERIC_VERSION().\n"
+	   "\n"
+	   "@SEEALSO=")
+};
+
+static Value *
+gnumeric_version (FunctionEvalInfo *ei, Value *argv [])
+{
+	return value_new_string (GNUMERIC_VERSION);
+}
+
+/***************************************************************************/
+
+static const char *help_selection = {
+	N_("@FUNCTION=SELECTION\n"
+	   "@SYNTAX=SELECTION(permit_intersection)\n"
+
+	   "@DESCRIPTION="
+	   "SELECTION function returns a list with the values in the current "
+	   "selection.  This is usually used to implement on-the-fly computation "
+	   "of values.\n"
+	   "If @permit_intersection is TRUE the user specifed selection "
+	   "ranges are returned, EVEN IF THEY OVERLAP.  "
+	   "If @permit_intersection is FALSE a distict set of regions is "
+	   "returned, however, there may be more of them than "
+	   "the user initially specified."
+
+	   "\n"
+	   "@EXAMPLES=\n"
+	   "\n"
+	   "@SEEALSO=")
+};
+
+typedef struct
+{
+	GSList * res;
+	int	index;
+} selection_accumulator;
+
+static void
+accumulate_regions (Sheet *sheet,  Range const *r, gpointer closure)
+{
+	selection_accumulator *accum = closure;
+	CellRef a, b;
+
+	/* Fill it in */
+	/* start */
+	a.sheet = sheet;
+	a.col_relative = a.row_relative = FALSE;
+	a.col = r->start.col;
+	a.row = r->start.row;
+
+	/* end */
+	b.sheet = sheet;
+	b.col_relative = b.row_relative = FALSE;
+	b.col = r->end.col;
+	b.row = r->end.row;
+
+	/* Dummy up the eval pos it does not matter */
+	accum->res = g_slist_prepend (accum->res,
+				      value_new_cellrange(&a, &b, 0, 0));
+	accum->index++;
+}
+
+/* This routine is used to implement the auto_expr functionality.  It is called
+ * to provide the selection to the defined functions.
+ */
+static Value *
+gnumeric_selection (FunctionEvalInfo *ei, Value *argv [])
+{
+	Sheet * const sheet = ei->pos->sheet;
+	gboolean const permit_intersection = argv [0]->v_bool.val;
+	Value * res;
+	int i;
+
+	selection_accumulator accum;
+	accum.res = NULL;
+	accum.index = 0;
+	selection_apply (sheet, &accumulate_regions,
+			 permit_intersection, &accum);
+
+	i = accum.index;
+	res = value_new_array_empty (i, 1);
+	while (i-- > 0) {
+		/* pop the 1st element off the list */
+		Value *range = accum.res->data;
+		accum.res = g_slist_remove (accum.res, range);
+
+		value_array_set (res, i, 0, range);
+	}
+	return res;
+}
+
+/***************************************************************************/
+
 static const char *mathcatname = N_("Maths / Trig.");
 static GSList *mathfuncs = NULL;
+
+static const char *gnumericcatname = N_("Gnumeric");
+static GSList *gnumericfuncs = NULL;
+
+static const char *sheetcatname = N_("Sheet");
+static GSList *sheetfuncs = NULL;
 
 void
 func_builtin_init (void)
@@ -107,6 +218,10 @@ func_builtin_init (void)
 	FunctionDefinition *def;
 	FunctionCategory *mathcat = function_get_category_with_translation
 		(mathcatname, _(mathcatname));
+	FunctionCategory *gnumericcat = function_get_category_with_translation
+		(gnumericcatname, _(gnumericcatname));
+	FunctionCategory *sheetcat = function_get_category_with_translation
+		(sheetcatname, _(sheetcatname));
 
 	def = function_add_nodes (mathcat, "sum",     0,
 				  "number1,number2,...",
@@ -117,23 +232,40 @@ func_builtin_init (void)
 	def = function_add_nodes (mathcat, "product", 0,
 				  "number",    &help_product,  gnumeric_product);
 	mathfuncs = g_slist_prepend (mathfuncs, def);
+
+	def = function_add_args (gnumericcat, "gnumeric_version", "",  "",
+				 &help_gnumeric_version, gnumeric_version);
+	gnumericfuncs = g_slist_prepend (gnumericfuncs, def);
+
+	def = function_add_args (sheetcat, "selection", "b",  "permit_intersection",
+				 &help_selection, gnumeric_selection);
+	sheetfuncs = g_slist_prepend (sheetfuncs, def);
 }
 
-void
-func_builtin_shutdown (void)
+static void
+shutdown_cat (const char *catname, GSList **funcs)
 {
 	GSList *tmp;
-	FunctionCategory *mathcat = function_get_category_with_translation
-		(mathcatname, _(mathcatname));
 
-	for (tmp = mathfuncs; tmp; tmp = tmp->next) {
+	FunctionCategory *cat =
+		function_get_category_with_translation (catname, _(catname));
+
+	for (tmp = *funcs; tmp; tmp = tmp->next) {
 		FunctionDefinition *def = tmp->data;
 		const char *name = function_def_get_name (def);
 
 		auto_format_function_result_remove (name);
-		function_remove (mathcat, name);
+		function_remove (cat, name);
 	}
+	g_slist_free (*funcs);
+	*funcs = NULL;
+}
 
-	g_slist_free (mathfuncs);
-	mathfuncs = NULL;
+
+void
+func_builtin_shutdown (void)
+{
+	shutdown_cat (mathcatname, &mathfuncs);
+	shutdown_cat (gnumericcatname, &gnumericfuncs);
+	shutdown_cat (sheetcatname, &sheetfuncs);
 }
