@@ -36,7 +36,6 @@
 static GList *categories = NULL;
 static SymbolTable *global_symbol_table = NULL;
 
-extern void sheet_functions_init       (void);
 extern void stat_functions_init        (void);
 extern void lookup_functions_init      (void);
 extern void database_functions_init    (void);
@@ -47,7 +46,6 @@ functions_init (void)
 {
 	global_symbol_table = symbol_table_new ();
 
-	sheet_functions_init ();
 	stat_functions_init ();
 	lookup_functions_init ();
 	database_functions_init ();
