@@ -11,5 +11,4 @@ libfunctions_a_SOURCES =			\
 	fn-database.c				\
 	fn-information.c			\
 	fn-lookup.c				\
-	fn-sheet.c				\
 	fn-stat.c
